--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="script.js" ></script>
 </head>
 <body>
-  
+  <h1><strong>Rock Paper Scissors</strong></h1>
   
 </body>
 </html>
