--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <title>Rock Paper Scissors</title>
   <script type="text/javascript" src="script.js" ></script>
 </head>
+<div class="mainContainer">
 <body>
   <h1><strong>Rock Paper Scissors</strong></h1>
-  
+
 </body>
+
+</div>
 </html>
