--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script type="text/javascript" src="script.js" ></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<div class="mainContainer">
-<body>
-  <h1><strong>Rock Paper Scissors</strong></h1>
 
+<body>
+  <div class="topSpace"></div>
+  <div class="mainContainer">
+  <h1><strong>Rock Paper Scissors</strong></h1>
+  <div class="playButtons">
+    <button class="btn" id="rock">
+      <p>ROCK</p>
+    </button>
+    <button class="btn" id="paper">
+      <p>PAPER</p>
+    </button>
+    <button class="btn" id="scissors">
+      <p>SCISSORS</p>
+    </button>
+  </div>
+  <div>
+    <p class="plScore">Player Score</p>
+    <p class="pcScore">Computer Score</p>
+  </div>
+  </div>
+  <script type="text/javascript" src="script.js" ></script>
 </body>
 
-</div>
+
 </html>
