workgin basic UI still missing reset btn

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </button>
   </div>
   <div>
-    <p class="plScore">Player Score</p>
-    <p class="pcScore">Computer Score</p>
+    <p class="plScore">Player Score<p class="scorePl">0</p></p>
+    <p class="pcScore">Computer Score<p class="scorePc">0</p></p>
+    <p class="winner"></p>
   </div>
   </div>
   <script type="text/javascript" src="script.js" ></script>
