UI progress stage1

--- a/index.html
+++ b/index.html
@@ -9,26 +9,35 @@
 </head>
 
 <body>
-  <div class="topSpace"></div>
+  <section>
   <div class="mainContainer">
-  <h1><strong>Rock Paper Scissors</strong></h1>
+  <h1><strong>CHOOSE YOUR WEAPON</strong></h1>
+</div>
   <div class="playButtons">
     <button class="btn" id="rock">
-      <p>ROCK</p>
     </button>
     <button class="btn" id="paper">
-      <p>PAPER</p>
     </button>
     <button class="btn" id="scissors">
-      <p>SCISSORS</p>
     </button>
+    <button class="btn" id="pc-choice">
+    </button> 
   </div>
-  <div>
-    <p class="plScore">Player Score<p class="scorePl">0</p></p>
-    <p class="pcScore">Computer Score<p class="scorePc">0</p></p>
+
+  <div class="scoreBoard">
+    <div>
+      <p class="plScore">Player Score</p>
+      <p class="scorePl">0</p>
+    </div>
+    <div>
+      <p class="pcScore">Computer Score</p>
+      <p class="scorePc">0</p>
+    </div> 
+    <div>
     <p class="winner"></p>
   </div>
   </div>
+</section>
   <script type="text/javascript" src="script.js" ></script>
 </body>
 
