--- a/index.html
+++ b/index.html
@@ -4,39 +4,49 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+    </style>
   <title>Rock Paper Scissors</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <section>
-  <div class="mainContainer">
+  <div class="headingCointainer">
   <h1><strong>CHOOSE YOUR WEAPON</strong></h1>
 </div>
-  <div class="playButtons">
+<div class="scoreBoard">
+  <div>
+    <p class="plScore">Player Score</p>
+    <p class="scorePl">0</p>
+  </div>
+  <div>
+    <p class="pcScore">Computer Score</p>
+    <p class="scorePc">0</p>
+  </div>
+</div>
+
+<div class="winnerDiv">
+  <p class="winner"></p>
+  <button class="restartBtn" id="restart">Try Again</button>
+</div>
+
+<div class="playButtons">
+  <div>
     <button class="btn" id="rock">
     </button>
     <button class="btn" id="paper">
     </button>
     <button class="btn" id="scissors">
     </button>
-    <button class="btn" id="pc-choice">
-    </button> 
+  </div>
+  <div>
+    <img class="pcChoice" src="images/hand.png">
+    </button>
+  </div>
   </div>
 
-  <div class="scoreBoard">
-    <div>
-      <p class="plScore">Player Score</p>
-      <p class="scorePl">0</p>
-    </div>
-    <div>
-      <p class="pcScore">Computer Score</p>
-      <p class="scorePc">0</p>
-    </div> 
-    <div>
-    <p class="winner"></p>
-  </div>
-  </div>
 </section>
   <script type="text/javascript" src="script.js" ></script>
 </body>
